--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "",
   "version": "0.1.0",
   "description": "Tutorial and template for creating a full stack application with TRPC + Prisma + AWS deployment",
   "engines": {
@@ -8,7 +8,9 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-      "dev": "next dev"
+    "dev": "next dev",
+    "prettier": "prettier --write .",
+    "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src"
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
@@ -37,7 +39,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "prisma": "^4.7.1",
     "start-server-and-test": "^1.12.0",
     "tsx": "^3.9.0",
