--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "prettier": "prettier --write .",
     "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src"
@@ -27,6 +28,8 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@playwright/test": "^1.26.1",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
@@ -38,6 +41,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
     "prisma": "^4.7.1",
