--- a/.eslintrc
+++ b/.eslintrc
@@ -17,19 +17,15 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
   },
-  // "overrides": [
-  //   {
-  //     "files": [],
-  //     "rules": {
-  // "@typescript-eslint/no-unused-vars": "off"
-  //     }
-  //   }
-  // ],
-  "settings": {
-    "react": {
-      "version": "detect"
+  "overrides": [
+    {
+        "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
+        "rules": {
+            "storybook/hierarchy-separator": "error"
+        }
     }
-  }
+  ]
 }
