--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "husky install",
     "dev": "next dev",
     "prettier": "prettier --write .",
-    "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src"
+    "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives --report-unused-disable-directives src",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
@@ -28,13 +30,23 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@playwright/test": "^1.26.1",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.7.20",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.0",
     "eslint-config-prettier": "^8.5.0",
@@ -48,10 +60,14 @@
     "start-server-and-test": "^1.12.0",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3",
+    "util": "^0.12.5",
     "vite": "^3.1.3",
     "vitest": "^0.23.4"
   },
   "publishConfig": {
     "access": "restricted"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
