feat: added sass integration with storybook and nextjs

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,9 +22,9 @@
   },
   "overrides": [
     {
-      "files": ["*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
+      "files": ["*/**/*.stories.@(ts|tsx|js|jsx|mjs|cjs)"],
       "rules": {
-        "storybook/hierarchy-separator": "error"
+        "storybook/hierarchy-separator": "off"
       }
     }
   ]
