--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-links": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@types/node": "^18.7.20",
@@ -57,7 +58,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.3",
     "prisma": "^4.7.1",
+    "sass": "^1.57.1",
     "start-server-and-test": "^1.12.0",
+    "storybook-addon-next": "^1.7.1",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3",
     "util": "^0.12.5",
