--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.7.1",
     "@tanstack/react-query": "^4.3.8",
@@ -43,7 +46,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
-    "@types/node": "^18.7.20",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -61,8 +64,9 @@
     "sass": "^1.57.1",
     "start-server-and-test": "^1.12.0",
     "storybook-addon-next": "^1.7.1",
+    "ts-node": "^10.9.1",
     "tsx": "^3.9.0",
-    "typescript": "^4.8.3",
+    "typescript": "^4.9.4",
     "util": "^0.12.5",
     "vite": "^3.1.3",
     "vitest": "^0.23.4"
